# Octocrawl

./: .gitignore  README.MD  install.py  main.py  pyproject.toml  requirements.txt  testserver.py
src/: crawler.py  fingerprint.py  http_request.py  parser.py  robots_sitemap.py  tree_maker.py  ui.py  updater.py  user_agents.py  user_agents.txt
src/modules/: MODULES.MD  __init__.py  example.py  headers.py  module_manager.py
src/octocrawl/: crawler.py  http_request.py  main.py  parser.py  robots_sitemap.py  tree_maker.py  ui.py  user_agents.py
src/octocrawl/modules/: MODULES.MD  brokenlinks.py  cors.py  example.py  export.py  headers.py  jsintel.py  module_manager.py  wordlist.py
